Menambahkan isi deskripsi pada tabel dan menambahkan button pada tabel

--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@ body {
     font-family: verdana;
     color: white;
 }
+table {
+    background-color: darkgrey;
+    font-family: geotgia;
+}
+img {
+    width: 200px;
+    height: auto;
+}
