--- a/style.css
+++ b/style.css
@@ -5,11 +5,21 @@ body {
     font-family: verdana;
     color: white;
 }
-table {
+.buttonadd {
+    background-color: red;
+    color: white;
+    font-family: georgia;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+}
+.produk table {
     background-color: darkgrey;
     font-family: geotgia;
 }
-img {
-    width: 200px;
-    height: auto;
+.produk img {
+    width: 150px;
+    height: 200px;
 }
