Menambahkan table pada masing2 produk

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     background-color: darkgrey;
     font-family: georgia;
     padding: 10px 10px 0px 10px;
+    display: inline-block;
 }
 .produk img {
     width: 200px;
